--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "dependencies": {
     "babel": "^5.8.23",
     "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "babelify": "^6.3.0",
+    "browserify": "^11.2.0",
+    "concat": "^1.0.0",
+    "gulp": "^3.9.0",
+    "watchify": "^3.4.0"
   }
 }
