--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "browserify": "^11.2.0",
     "concat": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-if": "^2.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   }
 }
