--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/Radahika/Lighthouse#readme",
   "dependencies": {
     "babel": "^5.8.23",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
@@ -28,7 +29,9 @@
     "concat": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
+    "gulp-sass": "^2.0.4",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   }
