--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "babel": "^5.8.23",
     "express": "^4.13.3",
+    "react": "^0.13.3",
+    "react-router": "^0.13.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
