--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.3",
     "react": "^0.13.3",
     "react-router": "^0.13.4",
+    "swig": "^1.4.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
